fix: enable horizontal scroll on kanban

--- a/src/global.scss
+++ b/src/global.scss
@@ -2748,7 +2748,7 @@ hr {
   overflow-x: auto;
   overflow-y: auto;
   white-space: nowrap;
-  padding: 0 1rem;
+  padding: 0 1rem 0.5rem;
   scrollbar-gutter: stable;
 }
 
